--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>vue-music</title>
   </head>
   
-  <body>
+  <body style="background: #222;">
     <div id="app"></div>
     <!-- built files will be auto injected -->
     <script type="text/javascript" src="static/mui/mui.min.js" ></script>
